--- a/spring-cloud-nike-running/running-location-simulator/pom.xml
+++ b/spring-cloud-nike-running/running-location-simulator/pom.xml
@@ -9,9 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <artifactId>running-location-simulator</artifactId>
     <name>running-location-simulator</name>
     <description>Spring Nike Running Location Simulator</description>
+
 
     <dependencies>
         <dependency>
@@ -21,6 +27,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.maps</groupId>
