--- a/spring-cloud-nike-running/running-location-simulator/pom.xml
+++ b/spring-cloud-nike-running/running-location-simulator/pom.xml
@@ -33,6 +33,10 @@
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.maps</groupId>
             <artifactId>google-maps-services</artifactId>
             <version>0.1.7</version>
@@ -47,6 +51,7 @@
             <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
